--- a/index.html
+++ b/index.html
@@ -664,7 +664,7 @@
                             </div>
                             <div class="contact-item">
                                 <i class="fas fa-phone"></i>
-                                <span>+62 888-0548-3896/span>
+                                <span>+62 888-0548-3896</span>
                             </div>
                             <div class="contact-item">
                                 <i class="fas fa-map-marker-alt"></i>
